# open-review

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  langgraph.json  pyproject.toml
agent/: bootstrap_env.py  config.py  prompt.py  raw_records.py  server.py  webapp.py
agent/admin/: __init__.py  (+1 more)
reference/: AGENTS.md
scripts/: container-entrypoint.sh
tests/: test_admin_console.py  test_agent_self_evolution_runtime.py  test_agent_self_evolution_structure.py  test_auto_review_orchestrator.py  test_auto_review_static_workbench.py  test_config_state_layout.py  test_controlplane_config.py  test_daily_audit_deepagents_runtime.py  test_daily_audit_direction_persistence.py  test_daily_audit_evolution.py  test_daily_audit_layout.py  test_daily_audit_long_term_persistence.py  test_daily_audit_memory.py  test_daily_audit_orchestrator.py  test_daily_audit_self_repo.py  test_daily_audit_short_term_persistence.py  test_daily_audit_skill_persistence.py  test_daily_audit_skills.py  test_deploy_assets.py  test_deploy_cleanup.py  test_diff_parser.py  test_docker_backend.py  test_gepa_prompt_self_evolution.py  test_gitlab_client.py  test_gitlab_comments.py  test_gitlab_deploy.py  test_gitlab_project_ops.py  test_gitlab_project_targets.py  test_graph_builders.py  test_mention_handler.py  test_mention_orchestrator.py  test_model_factory.py  test_model_retry_middleware.py  test_phoenix_observability.py  test_rlm_subagent.py  test_runtime.py  test_runtime_publish.py  test_runtime_trigger_events.py  test_runtime_worker.py  test_sandbox_command_runner.py  (+10 more)
(+145 files in other folders)
